Added links to github and netlify

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>AI Film Quote Generator</title>
   </head>
   <body>
+    <footer>
+      This AI project is coded by
+      <a href="https://github.com/ltakoushi18" target="_blank">Layla Takoushi</a
+      >, open sourced on
+      <a
+        href="https://github.com/ltakoushi18/film-quote-generator"
+        target="_blank"
+        >Github</a
+      >, and is hosted on
+      <a href="https://ai-film-quote-generator.netlify.app/" target="_blank"
+        >Netlify.</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
