--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>AI Film Quote Generator</title>
   </head>
   <body>
+    <header>
+      <h1>AI Film Quote Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter film choice"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" name="" id="" />
+      </form>
+      <div>
+        Film quote goes here
+        <br />
+        and here
+      </div>
+    </main>
     <footer>
       This AI project is coded by
       <a href="https://github.com/ltakoushi18" target="_blank">Layla Takoushi</a
