Started adding CSS

--- a/index.html
+++ b/index.html
@@ -4,42 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>AI Film Quote Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Film Quote Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter film choice"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" name="" id="" />
-      </form>
-      <div>
-        Film quote goes here
-        <br />
-        and here
-      </div>
-    </main>
-    <footer>
-      This AI project is coded by
-      <a href="https://github.com/ltakoushi18" target="_blank">Layla Takoushi</a
-      >, open sourced on
-      <a
-        href="https://github.com/ltakoushi18/film-quote-generator"
-        target="_blank"
-        >Github</a
-      >, and is hosted on
-      <a href="https://ai-film-quote-generator.netlify.app/" target="_blank"
-        >Netlify.</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h1>AI Film Quote Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter film choice"
+            autofocus
+            required
+            autocomplete="off"
+          />
+          <input type="submit" name="" id="" />
+        </form>
+        <div>
+          Film quote goes here
+          <br />
+          and here
+        </div>
+      </main>
+      <footer>
+        This AI project is coded by
+        <a href="https://github.com/ltakoushi18" target="_blank"
+          >Layla Takoushi</a
+        >, open sourced on
+        <a
+          href="https://github.com/ltakoushi18/film-quote-generator"
+          target="_blank"
+          >Github</a
+        >, and is hosted on
+        <a href="https://ai-film-quote-generator.netlify.app/" target="_blank"
+          >Netlify.</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
