--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             autofocus
             required
             autocomplete="off"
+            class="search-button"
           />
-          <input type="submit" name="" id="" />
+          <input type="submit" class="submit-button" />
         </form>
-        <div>
+        <div class="insert-quote">
           Film quote goes here
           <br />
           and here
