Added axios and api integration

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Outfit:wght@100..900&display=swap"
@@ -27,6 +28,7 @@
             required
             autocomplete="off"
             class="search-button"
+            id="user-instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
