fixed bug with css on output

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </form>
           <div class="example">i.e The Wizard of Oz</div>
         </div>
-        <div class="insert-quote-hidden" id="film-quote-actual"></div>
+        <div class="insert-quote hidden" id="insert-quote"></div>
       </main>
       <footer>
         This AI project is coded by
